# nise

./: pyproject.toml
nise_extension/: manifest.json
nise_extension/scripts/: background.js  content.js
src/: entities.py  main.py  validate.py
